# mpeg-pcc-dmetric

./: build.sh  clear.sh  readme.md  run_longdress.sh  run_loot.sh  run_redandblack.sh  run_soldier.sh
doc/: Makefile  README.about.md  README.build.md  README.clone.md  README.options.md  README.usage.md  mpegdoc.cls
results/: longdress_r1.txt  longdress_r3.txt  longdress_r5.txt  loot_r1_single.txt  loot_r3_single.txt  loot_r5_single.txt  redandblack_r1_single.txt  redandblack_r3_single.txt  redandblack_r5_single.txt  soldier_r1_single.txt  soldier_r3_single.txt  soldier_r5_single.txt
source/: CMakeLists.txt  main.cpp  pcc_distortion.cpp  pcc_distortion.hpp  pcc_processing.cpp
